# garbage_collector

./: .gitignore  README.md  pyproject.toml
frontend/: .eslintrc.js  README.md  babel.config.json  package-lock.json  package.json  tsconfig.json  webpack.config.ts
frontend/config/jest/: jest.config.ts  jestEmptyComponent.tsx
frontend/public/: index.html
frontend/src/: index.tsx
frontend/src/app/: App.tsx
frontend/src/app/styles/: index.scss  reset.scss
frontend/src/app/types/: global.d.ts
frontend/src/entities/Post/: index.ts
frontend/src/entities/User/: index.ts
frontend/src/features/Login/: index.ts
frontend/src/pages/LoginPage/: index.ts
frontend/src/pages/NewsPage/: index.ts
frontend/src/pages/ProfilePage/: index.ts
frontend/src/pages/RatingPage/: index.ts
frontend/src/pages/RegistrationPage/: index.ts
frontend/src/shared/api/: axios.ts
garbage_collector/: manage.py  requirements.txt
garbage_collector/config/: settings.py  urls.py  wsgi.py
garbage_collector/garbage_collector/: asgi.py  settings.py  urls.py
garbage_collector/main/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
garbage_collector/main/migrations/: 0001_initial.py  0002_post.py  0003_alter_collector_carton_alter_collector_glass_and_more.py  0004_alter_garbagedelivery_table.py  0005_collector_username.py  0006_alter_collector_username.py  0007_alter_collector_user.py
garbage_collector/utils/db/: db_reader.py  db_seeder.py
garbage_collector/utils/scheduler/: scheduler.py
garbage_collector/utils/scrapers/: baigenews.py  scrapers_base.py
(+103 files in other folders)
