[tool.poetry]
name = "garbage-collector"
version = "0.1.0"
description = ""
authors = ["liskunovich <david.leonov.96@mail.ru>"]
readme = "README.md"
packages = [{include = "garbage_collector"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.7"
djangorestframework = "^3.14.0"
markdown = "^3.4.1"
django-filter = "^22.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
