[tool.poetry]
name = "garbage-collector"
version = "0.1.0"
description = ""
authors = ["liskunovich <david.leonov.96@mail.ru>"]
readme = "README.md"
packages = [{include = "garbage_collector"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.7"
djangorestframework = "^3.14.0"
markdown = "^3.4.1"
django-filter = "^22.1"
djangorestframework-simplejwt = "^5.2.2"
aiohttp = "^3.8.4"
fake-headers = "^1.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
